# UCN-Simulations

./: README.md
code/: CMakeCache.txt  CMakeLists.txt  Lisezmoi.txt  Makefile  auto_run_simulation.sh  cmake_install.cmake  merge.sh  merge1.sh
code/bash/: merge.sh  parallel.sh
code/src/: KSIntMovingSurfaceUCN.cxx  KSIntMovingSurfaceUCNBuilder.cxx  addHistogram.cpp  add_histogram.cpp  boltzmannSpectrum.c  boltzmann_spectrum.c  conversion.cxx  convertCsvToRoot.cpp  convertRootToCsv.cpp  create_histogram.cpp  output_test.csv
code/src/include/: KSIntMovingSurfaceUCN.h  KSIntMovingSurfaceUCNBuilder.h
code_Kassiopeia/: KSIntMovingSurfaceUCN.cxx  KSIntMovingSurfaceUCN.h  KSTrajTermMovingSurface.cxx  KSTrajTermMovingSurface.h  KSTrajTermMovingSurfaceBuilder.cxx  KSTrajTermMovingSurfaceBuilder.h
config/Beamline/: beamline.xml  beamline_2_bend_surface_slits.xml  beamline_surface.xml  beamline_surface_auto.xml  beamline_surface_slits.xml  beamline_surface_slits_auto.xml  beamline_test.xml
config/Beamline/histogram/: beamline_spectrum_P1.root  beamline_spectrum_cumul.root
config/Beamline/program/: CMakeCache.txt  Makefile  cmake_install.cmake
config/Piston/: piston_test.xml  tSPECT_piston.xml  tSPECT_piston_auto.xml  tSPECT_piston_port_housing.xml  tSPECT_piston_shutter_TRIGA_auto.xml
config/Spectrum/: triga_neutron_spectrum.csv  triga_neutron_spectrum.root  triga_neutron_spectrum_2.root  triga_neutron_spectrum_3.root  triga_neutron_spectrum_gr.root
log/Beamline/: Beamline_log.txt
log/Piston/: Beamline_log.txt
output/Beamline/: beamline_geometry.vtp  beamline_simulation.root  track_painter.vtp
output/Beamline/auto/: beamline_surface_auto_simulation_triga_21.root  beamline_surface_auto_simulation_triga_22.root  beamline_surface_auto_simulation_triga_23.root  beamline_surface_auto_simulation_triga_24.root  beamline_surface_auto_simulation_triga_25.root  beamline_surface_auto_simulation_triga_26.root  beamline_surface_auto_simulation_triga_27.root  beamline_surface_auto_simulation_triga_31.root  beamline_surface_auto_simulation_triga_32.root  beamline_surface_auto_simulation_triga_33.root  beamline_surface_auto_simulation_triga_34.root  beamline_surface_simulation_triga_14.root  (+1 more)
output/Piston/: piston_geometry.vtp  piston_simulation_test_1.root  track_painter.vtp
results/csv/: Beamline Simulation results.xlsx  TRIGA_Spectrum_Beamline_final_kinetic_energy_success.csv
(+22 files in other folders)
